--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,6 +9,7 @@
 		"dockerfile": "Dockerfile",
 		"context": "../"
 	},
+	"forwardPorts": [8000],
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/azure-cli:1": {},  					// azure-cli
@@ -44,7 +45,8 @@
 	// },
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install -r src/requirements.txt &&  pip3 install -r src/requirements-dev.txt"
+	// "postCreateCommand": "pip3 install -r src/requirements.txt &&  pip3 install -r src/requirements-dev.txt"
+	"postCreateCommand": "pip3 install -r src/requirements-dev.txt"
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
