--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -6,5 +6,6 @@ graphrag~=0.3.6
 fastapi~=0.115.3
 uvicorn~=0.32.0
 jinja2~=3.1.4
-async_lru~=2.0.4
+# async_lru~=2.0.4
+# aiocache~=0.12.3
 python-multipart~=0.0.17
